; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/android/extr_binder.c_binder_has_proc_work.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/android/extr_binder.c_binder_has_proc_work.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.binder_proc = type { i32 }
%struct.binder_thread = type { i32 }

@BINDER_LOOPER_STATE_NEED_RETURN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.binder_proc*, %struct.binder_thread*)* @binder_has_proc_work to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @binder_has_proc_work(%struct.binder_proc* %0, %struct.binder_thread* %1) #0 {
  %3 = alloca %struct.binder_proc*, align 8
  %4 = alloca %struct.binder_thread*, align 8
  store %struct.binder_proc* %0, %struct.binder_proc** %3, align 8
  store %struct.binder_thread* %1, %struct.binder_thread** %4, align 8
  %5 = load %struct.binder_proc*, %struct.binder_proc** %3, align 8
  %6 = getelementptr inbounds %struct.binder_proc, %struct.binder_proc* %5, i32 0, i32 0
  %7 = call i32 @list_empty(i32* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %2
  %10 = load %struct.binder_thread*, %struct.binder_thread** %4, align 8
  %11 = getelementptr inbounds %struct.binder_thread, %struct.binder_thread* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @BINDER_LOOPER_STATE_NEED_RETURN, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br label %16

16:                                               ; preds = %9, %2
  %17 = phi i1 [ true, %2 ], [ %15, %9 ]
  %18 = zext i1 %17 to i32
  ret i32 %18
}

declare dso_local i32 @list_empty(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
